massive WIP need to integrate the codec work