@@ -1,48 +1,47 @@
 package dev.morphia.query.validation;
 
-import com.mongodb.BasicDBObject;
-import org.junit.Test;
 import dev.morphia.mapping.MappedClass;
 import dev.morphia.mapping.MappedField;
 import dev.morphia.mapping.Mapper;
+import org.bson.Document;
+import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
+import static dev.morphia.query.FilterOperator.EQUAL;
+import static dev.morphia.query.FilterOperator.GEO_WITHIN;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertThat;
-import static dev.morphia.query.FilterOperator.EQUAL;
-import static dev.morphia.query.FilterOperator.GEO_WITHIN;
 
 public class GeoWithinOperationValidatorTest {
     @Test
     public void shouldAllowGeoWithinOperatorForGeoEntityWithListOfIntegers() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
         MappedClass mappedClass = new MappedClass(GeoEntity.class, new Mapper());
         MappedField mappedField = mappedClass.getMappedField("list");
-        assertThat(GeoWithinOperationValidator.getInstance().apply(mappedField, GEO_WITHIN, new BasicDBObject("$box", 1),
+        assertThat(GeoWithinOperationValidator.getInstance().apply(mappedField, GEO_WITHIN, new Document("$box", 1),
                                                                    validationFailures), is(true));
     }
 
     @Test
     public void shouldAllowGeoWithinOperatorWithAllAppropriateTrimmings() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
         MappedClass mappedClass = new MappedClass(GeoEntity.class, new Mapper());
         MappedField mappedField = mappedClass.getMappedField("array");
 
         // when
-        assertThat(GeoWithinOperationValidator.getInstance().apply(mappedField, GEO_WITHIN, new BasicDBObject("$box", 1),
+        assertThat(GeoWithinOperationValidator.getInstance().apply(mappedField, GEO_WITHIN, new Document("$box", 1),
                                                                    validationFailures), is(true));
     }
 
     @Test
     public void shouldNotApplyValidationWhenOperatorIsNotGeoWithin() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
 
         // when
         boolean validationApplied = GeoWithinOperationValidator.getInstance().apply(null, EQUAL, null, validationFailures);
@@ -55,12 +54,12 @@ public class GeoWithinOperationValidatorTest {
     @Test
     public void shouldRejectGeoWithinOperatorWhenMappedFieldIsArrayThatDoesNotContainNumbers() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
         MappedClass mappedClass = new MappedClass(InvalidGeoEntity.class, new Mapper());
         MappedField mappedField = mappedClass.getMappedField("arrayOfStrings");
 
         // when
-        boolean validationApplied = GeoWithinOperationValidator.getInstance().apply(mappedField, GEO_WITHIN, new BasicDBObject("$box", 1),
+        boolean validationApplied = GeoWithinOperationValidator.getInstance().apply(mappedField, GEO_WITHIN, new Document("$box", 1),
                                                                                     validationFailures);
 
         // then
@@ -72,14 +71,14 @@ public class GeoWithinOperationValidatorTest {
     @Test
     public void shouldRejectGeoWithinOperatorWhenMappedFieldIsListThatDoesNotContainNumbers() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
         MappedClass mappedClass = new MappedClass(InvalidGeoEntity.class, new Mapper());
         MappedField mappedField = mappedClass.getMappedField("listOfStrings");
 
         // when
         boolean validationApplied = GeoWithinOperationValidator.getInstance().apply(mappedField,
                                                                                     GEO_WITHIN,
-                                                                                    new BasicDBObject("$box", 1),
+                                                                                    new Document("$box", 1),
                                                                                     validationFailures);
 
         // then
@@ -91,14 +90,14 @@ public class GeoWithinOperationValidatorTest {
     @Test
     public void shouldRejectGeoWithinWhenValueDoesNotContainKeyword() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
         MappedClass mappedClass = new MappedClass(GeoEntity.class, new Mapper());
         MappedField mappedField = mappedClass.getMappedField("array");
 
         // when
         boolean validationApplied = GeoWithinOperationValidator.getInstance().apply(mappedField,
                                                                                     GEO_WITHIN,
-                                                                                    new BasicDBObject("notValidKey", 1),
+                                                                                    new Document("notValidKey", 1),
                                                                                     validationFailures);
 
         // then
@@ -111,7 +110,7 @@ public class GeoWithinOperationValidatorTest {
     @Test
     public void shouldRejectGeoWithinWhenValueIsNotADBObject() {
         // given
-        List<ValidationFailure> validationFailures = new ArrayList<ValidationFailure>();
+        List<ValidationFailure> validationFailures = new ArrayList<>();
         MappedClass mappedClass = new MappedClass(GeoEntity.class, new Mapper());
         MappedField mappedField = mappedClass.getMappedField("array");
 
@@ -131,12 +130,12 @@ public class GeoWithinOperationValidatorTest {
     @SuppressWarnings("unused")
     private static class GeoEntity {
         private final int[] array = {1};
-        private final List<Integer> list = Arrays.asList(1);
+        private final List<Integer> list = List.of(1);
     }
 
     @SuppressWarnings("unused")
     private static class InvalidGeoEntity {
         private final String[] arrayOfStrings = {"1"};
-        private final List<String> listOfStrings = Arrays.asList("1");
+        private final List<String> listOfStrings = List.of("1");
     }
 }
